--- a/frontend/src/components/ModelFusionTest.module.css
+++ b/frontend/src/components/ModelFusionTest.module.css
@@ -1,5 +1,6 @@
 .container {
-    width: 200px;
-    height: 200px;
-    background-color: red;
+    width: 80vw;
+    height: 80vh;
+    background-color: rgb(212, 212, 212);
+    overflow-y: scroll;
 }
