--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,17 @@
 .App {
   text-align: center;
-  background-color: #282c34;
+  background-color: #E0F4FF;
   height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.HeaderText{
+  font-size: 80px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  margin-bottom: 50px;
 }
