--- a/frontend/src/components/ModelFusionTest.module.css
+++ b/frontend/src/components/ModelFusionTest.module.css
@@ -1,6 +1,10 @@
 .container {
     width: 80vw;
     height: 80vh;
-    background-color: rgb(212, 212, 212);
+    background-color: #87C4FF;
     overflow-y: scroll;
+    font-family: 'Roboto', sans-serif;
+    border: 10px solid #39A7FF;
+    border-radius: 15px;
+    margin-bottom: 50px;
 }
